--- a/wedding/index.html
+++ b/wedding/index.html
@@ -42,8 +42,6 @@
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
                         <b style="font-size:1.4em;">2023년 12월 23일 (토) 저녁 6시</b>
-                        <br>
-                        <br>여의도 63빌딩 워킹온더클라우드
                     </p>
                 </div>
             </div>
@@ -61,9 +59,9 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#gifts">Gift</a></li>
+                            <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#gifts">Gift</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#map">Map</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="index_eng.html">ENG</a></li>
+                            <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="index_eng.html">ENG</a></li>-->
                         </ul>
                     </div>
                 </div>
@@ -73,20 +71,21 @@
             <div class="container">
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
                 <div class="row text-center">
+                 
                     <div class="col-md-6">
                         <div class="mt-3">
-                            <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                <!--Tian Qiu 邱天 초우 티안</h3>-->
-                                邱天 Qiu, Tian</h3>
-                            <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
+                            <h3 class="h2 ww-title" style="font-family: 'Noto Serif KR', sans-serif; font-size:1.5em">
+                                <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
+                                정용국</h3>
+                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
-                            <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
-                                정용국 Jeong, Yongkuk</h3>
-                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
+                            <h3 class="h2 ww-title" style="font-family: 'Noto Serif KR', sans-serif; font-size:1.5em">
+                                <!--Tian Qiu 邱天 초우 티안</h3>-->
+                                邱天 <a style="font-size:0.5em;">(초우 티안)</a></h3>
+                            <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
                 </div>
@@ -94,26 +93,21 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">결혼합니다!</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">저희 결혼합니다!</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            서로 다른 나라에서 태어난 저희 두 사람이 스웨덴에서 만나 이제 하나가 되어 한 길을 걷고자 합니다.<br>
-                            감사한 분들을 모시고 기쁨을 나누는 것이 도리이지만, 저희 두 사람과 양가 부모님의 뜻에 따라</br>
-                            간소하게 서약을 맺고자 합니다. 너그러운 마음으로 먼 곳에서라도 축하와 격려를 보내주시면 감사하겠습니다.
+                            서로 다른 환경에서 자란 저희 두 사람이 이제 하나가 되어 한 길을 걷고자 합니다.<br>
+                            간소한 서약을 위한 자리를 마련하였으니 바쁘시겠지만 참석해주시면 감사하겠습니다.
                         </h6>
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">결혼식</div>
+                            <div class="h4">여의도 63빌딩 워킹온더클라우드</div>
                             <ul>
-                                <li>
-                                    <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted">여의도 63빌딩 워킹온더클라우드</span>
-                                </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2023년 12월 23일 (토) 저녁 6시</span>
+                                    <span class="pl-2 text-muted">2023년 12월 23일 (토) 저녁 6시-9시</span>
                                 </li>
                             </ul>
                         </div>
@@ -130,38 +124,47 @@
         <div class="ww-section" id="gallery">
             <div class="ww-photo-gallery">
                 <div class="container">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Photo gallery</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">포토 갤러리</h2>
                     <div class="ww-gallery">
                         <div class="card-columns">
-                            <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 2" class="img-fluid" src="images/pic2.jpeg"/>
                                 </a>
                             </div>
-                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 3" class="img-fluid" src="images/pic3.jpeg"/>
                                 </a>
                             </div>
-                            <div class="card" data-groups="[&quot;party&quot;,&quot;vacation&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 4" class="img-fluid" src="images/pic4.jpeg"/>
                                 </a>
                             </div>
-                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 5" class="img-fluid" src="images/pic6.jpeg"/>
                                 </a>
                             </div>
-                            <div class="card"
-                                 data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 6" class="img-fluid" src="images/pic7.jpeg"/>
                                 </a>
                             </div>
-                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                            <div class="card">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
                                     <img alt="Gallery Pic 7" class="img-fluid" src="images/pic5.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 8" class="img-fluid" src="images/pic10.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 9" class="img-fluid" src="images/pic12.jpeg"/>
                                 </a>
                             </div>
                         </div>
@@ -169,11 +172,10 @@
                 </div>
             </div>
         </div>
-       <div class="ww-section parallax-window  text-white" data-parallax="scroll" data-image-src="images/gift/gift-background.jpg" id="gifts">
+       <!--<div class="ww-section parallax-window  text-white" data-parallax="scroll" data-image-src="images/gift/gift-background.jpg" id="gifts">
             <div class="ww-gift-section">
                 <div class="container">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Gift for our
-                        wedding</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Gift for our wedding</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             많은 분들을 직접 찾아뵙지 못하고 연락만 드리는 점 양해 부탁 드리며,<br>
@@ -186,7 +188,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
