--- a/wedding/index_c.html
+++ b/wedding/index_c.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Tian & Yongkuk 231223</title>
-    <meta content="Tian & Yongkuk 231223" name="description"/>
+    <title>邱天 & 郑用国 231223</title>
+    <meta content="邱天 & 郑用国 231223" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
     <meta property="fb:admins" content="Choi.Anderson"/>
@@ -41,7 +41,7 @@
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2023년 12월 23일 (토) 저녁 6시</b>
+                        <b style="font-size:1.4em;">2023年12月23日（星期六）晚上6点</b>
                     </p>
                 </div>
             </div>
@@ -70,14 +70,14 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">新郎 & 新娘</h2>
                 <div class="row text-center">
                  
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Noto Serif KR', sans-serif; font-size:1.5em">
                                 <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
-                                정용국</h3>
+                                郑用国 <a style="font-size:0.5em;">(정용국)</a></h3>
                             <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
@@ -94,21 +94,21 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">저희 결혼합니다!</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">我们结婚了！</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            서로 다른 환경에서 자란 저희 두 사람이 이제 하나가 되어 한 길을 걷고자 합니다.<br>
-                            간소한 서약을 위한 자리를 마련하였으니 바쁘시겠지만 참석해주시면 감사하겠습니다.
+                            我们两个在各自不同的环境中长大，现在决定走到一起，共同走一条路。<br>
+                            我们准备了一个简单的誓言仪式，虽然您可能很忙，但如果您能出席，我们将不胜感激。
                         </h6>
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">여의도 63빌딩 워킹온더클라우드</div>
+                            <div class="h4">汝矣岛63大厦 云端漫步</div>
                             <ul>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2023년 12월 23일 (토) 저녁 6시-9시</span>
+                                    <span class="pl-2 text-muted">2023年12月23日（星期六）晚上6点至9点</span>
                                 </li>
                             </ul>
                         </div>
@@ -125,7 +125,7 @@
         <div class="ww-section" id="gallery">
             <div class="ww-photo-gallery">
                 <div class="container">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">포토 갤러리</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">照片画廊</h2>
                     <div class="ww-gallery">
                         <div class="card-columns">
 
@@ -190,10 +190,10 @@
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">찾아오시는 길</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">如何到达</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">여의도 63빌딩 워킹온더클라우드</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">(서울 영등포구 63로 50)</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;">汝矣岛63大厦 云端漫步</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">(首尔永登浦区 63路 50)</h6>
                     </div>
                 </div>
 
