--- a/wedding/index_c.html
+++ b/wedding/index_c.html
@@ -70,25 +70,21 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">新郎 & 新娘</h2>
-                <div class="row text-center">
-                 
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">邱天 & 郑用国</h2>
+                <div class="row text-center">                 
                     <div class="col-md-6">
                         <div class="mt-3">
-                            <h3 class="h2 ww-title" style="font-family: 'Noto Serif KR', sans-serif; font-size:1.5em">
-                                <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
-                                郑用国 <a style="font-size:0.5em;">(정용국)</a></h3>
-                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
+                            <img alt="Bride and Groom" class="img-fluid" src="images/pic0.jpeg"/>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <!--<div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Noto Serif KR', sans-serif; font-size:1.5em">
-                                <!--Tian Qiu 邱天 초우 티안</h3>-->
+                                Tian Qiu 邱天 초우 티안</h3>
                                 邱天 <a style="font-size:0.5em;">(초우 티안)</a></h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
