--- a/wedding/index.html
+++ b/wedding/index.html
@@ -99,7 +99,10 @@
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             서로 다른 장소, 문화, 환경에서 자란 저희 두 사람이 <br>이제 하나가 되어 한 가정을 이루고자 합니다.<br>
                             간소한 서약을 위한 자리를 마련하여 가족 어르신들을 초대합니다.<br>
-                            바쁘시더라도 참석하여 자리를 빛내주시면 감사하겠습니다.
+                            바쁘시더라도 참석하여 자리를 빛내주시면 감사하겠습니다.<br>
+                        </h6>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">
+                            <b>마음 전하실 곳</b> 신한 110 008 992795 (정하근)<br>
                         </h6>
                     </div>
                 <div class="row">
