--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<ul>
 				<li>2023</li>
 				<ul>
+					<li><b>Yongkuk Jeong</b>, Erik Flores-García, Simon Piontek, and Magnus Wiktorsson (2023), <span style="color:#1d6ab8">Implementing transmission of data for digital twins in human-centered cyber-physical systems</span>, CIRP CMS 2023, Cape Town, South Africa, 24-26 October, 2023</li>
 					<li>Erik Flores-García, So Hyun Nam, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, and Jong Hun Woo (2023), <span style="color:#1d6ab8">Beyond the Lab: Exploring the Socio-Technical Implications of Machine Learning in Biopharmaceutical Manufacturing</span>, APMS 2023, Trondheim, Norway, 17-21 September, 2023</li>
 					<li><b>Yongkuk Jeong</b>, Magnus Wiktorsson, Donggyun Park, Jesper Gans, and Linda Svensson (2023), <span style="color:#1d6ab8">Data Preparation for AI-Assisted Video Analysis in Manual Assembly Task: A Step Towards Industry 5.0</span>, APMS 2023, Trondheim, Norway, 17-21 September, 2023</li>
 					<li><b>Yongkuk Jeong</b> and Jannicke Baalsrud Hauge (2023), <span style="color:#1d6ab8">Digitalization in production logistics towards Industry 5.0: Anaylsis of industrial project cases</span>, ISL 2023, Enschede, Netherlands, 9-12 July, 2023</li>
